--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=timecode
 DB_USERNAME=root
 DB_PASSWORD=
 
+NATIVEPHP_APP_NAME="TimeCode"
+NATIVEPHP_APP_VERSION="1.0.0"
+NATIVEPHP_APP_ID="dev.nexxai.timecode"
+NATIVEPHP_DEEPLINK_SCHEME="timecode"
+NATIVEPHP_APP_AUTHOR="JT Smith"
+NATIVEPHP_UPDATER_ENABLED=false
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
