--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0@beta",
-        "nativephp/electron": "^0.3.3"
+        "nativephp/electron": "^0.3.3",
+        "ryangjchandler/orbit": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
